interpreter-janeklang/tests/bad/06_wrongArgType_2.janek
int skibidi(int asd){
    return 0;
}

int main(){
    skibidi("asd");
}